...

import Foundation

public enum AccessibilityIdentifiers: String {
    // MARK: Login Screen identifiers

    case emailTextField = "login_email_text_field"
    case passwordTextField = "login_password_text_field"
    case loginButton = "login_button"
    case carouselView = "login_carousel_view"
    case mainView = "main_view_identifier"
    case carouselImage = "carousel_image_"
    case titleFirstLine = "login_title_first_line"
    case titleSecondLine = "login_title_second_line"
    case emailLabel = "login_email_label"
    case passwordLabel = "login_password_label"

    // MARK: Library Screen identifiers

    case libraryScreenView = "library_screen_view"
    case libraryTitle = "library_title"
    case newBooksTitle = "new_books_title"
    case popularBooksTitle = "popular_books_title"
    case booksCarousel = "books_carousel"
    case carouselItem = "carousel_item_"
    case booksGrid = "books_grid"
    case bookCard = "book_card_"
    case emptyCarouselMessage = "empty_carousel_message"
    case emptyGridMessage = "empty_grid_message"

    // MARK: Reading Screen identifiers

    case readingScreen = "reading_screen"
    case bookTitle = "book_title"
    case backButton = "back_button"
    case favoriteButton = "favorite_button"
    case bookPoster = "book_poster"
    case readButton = "read_button"
    case authorName = "author_name"
    case bookDescription = "book_description"
    case readingProgress = "reading_progress"
    case progressBar = "progress_bar"
    case contentsTitle = "contents_title"
    case chapterListItem = "chapter_list_item_"

    // MARK: Chapter Reading Screen identifiers

    case chapterReadingView = "chapter_reading_view"
    case chapterBackButton = "chapter_back_button"
    case chapterTitle = "chapter_title"
    case chapterPreviousButton = "chapter_previous_button"
    case chapterNextButton = "chapter_next_button"
    case chapterContentsButton = "chapter_contents_button"
    case chapterSettingsButton = "chapter_settings_button"
    case chapterPlayButton = "chapter_play_button"

    case paragraphText = "paragraph_text_"

    case settingsOverlay = "settings_overlay"
    case settingsCloseButton = "settings_close_button"
    case settingsTitle = "settings_title"
    case fontSizeLabel = "font_size_label"
    case fontSizeValue = "font_size_value"
    case fontSizeDecreaseButton = "font_size_decrease_button"
    case fontSizeIncreaseButton = "font_size_increase_button"
    case lineSpacingLabel = "line_spacing_label"
    case lineSpacingValue = "line_spacing_value"
    case lineSpacingDecreaseButton = "line_spacing_decrease_button"
    case lineSpacingIncreaseButton = "line_spacing_increase_button"

    case chaptersOverlay = "chapters_overlay"
    case chaptersCloseButton = "chapters_close_button"
    case chaptersDragIndicator = "chapters_drag_indicator"
    case chaptersListView = "chapters_list_view"
    case chaptersTitle = "chapters_title"

    case quoteOverlay = "quote_overlay"
    case quoteTextEditor = "quote_text_editor"
    case quoteDragIndicator = "quote_drag_indicator"
    case quoteScrollView = "quote_scroll_view"
    case quoteRestoreButton = "quote_restore_button"
    case quoteCancelButton = "quote_cancel_button"
    case quoteAddButton = "quote_add_button"

...
