...
                                }
                        }
                        .accessibilityIdentifier(AccessibilityIdentifiers.quoteScrollView.rawValue)
                        .frame(maxHeight: 200)
                        .padding(.horizontal, 20)
                        Button(action: onRestore) {
                            Text("Восстановить исходный текст")
                                .font(.system(size: 14))
                                .foregroundColor(.accentDark)
                        }
                        .accessibilityIdentifier(AccessibilityIdentifiers.quoteRestoreButton.rawValue)
                        .padding(.horizontal, 20)
                        .opacity(selectedText != originalSelectedText ? 1 : 0.3)
...
                                Text("Отмена")
                                    .foregroundStyle(.accentDark)
                                    .applyButtonStyle(backgroundColor: AppColors.accentLight.color)
                            }
                            .accessibilityIdentifier(AccessibilityIdentifiers.quoteCancelButton.rawValue)
                            Button(action: onAdd) {
                                Text("Добавить в цитаты")
                                    .applyButtonStyle(foregroundColor: .white, backgroundColor: AppColors.accentDark.color)
                            }
                            .accessibilityIdentifier(AccessibilityIdentifiers.quoteAddButton.rawValue)
                        }
                        .padding(.horizontal, 20)
                        .padding(.bottom, geometry.safeAreaInsets.bottom > 0 ? geometry.safeAreaInsets.bottom : 30)
...
